--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "sweetalert2": "^11.14.4",
+    "valibot": "^0.42.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
