--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.53.1",
     "sweetalert2": "^11.14.4",
     "valibot": "^0.42.1",
+    "validators": "^0.3.1",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
