--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "mongodb": "^6.10.0",
     "next": "15.0.1",
