--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "mongodb": "^6.10.0",
     "next": "15.0.1",
     "react": "^18.2.0",
