--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
     "next": "15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
