--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.1",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
@@ -28,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "sweetalert2": "^11.14.4",
     "valibot": "^0.42.1",
     "validators": "^0.3.1",
