--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@types/leaflet": "^1.9.14",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "flowbite": "^2.5.2",
