--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.1.5",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^2.8.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "flowbite": "^2.5.2",
@@ -40,6 +41,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
