--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
+    "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
