--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/base": "^5.0.0-beta.61",
     "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@mui/material": "^6.1.6",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^2.8.3",
     "bcrypt": "^5.1.1",
