--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
