--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/base": "^5.0.0-beta.61",
     "@mui/icons-material": "^6.1.5",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.6",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^2.8.3",
