--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "express": "^4.21.1",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.461.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
