--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.4",
     "valibot": "^0.42.1",
