--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.4",
