--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lucide-react": "^0.461.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
-    "next": "15.0.1",
+    "next": "^15.0.4",
     "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
