handle the style

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
+    "lighthouse": "^12.3.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.461.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "^15.0.4",
     "next-auth": "^4.24.10",
+    "puppeteer": "^23.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
